feat: add document comments and secure file download